--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: url('res/babyshark_instrument_bg-clean.png') no-repeat center center fixed;
+            background: url('res/bg.jpeg') no-repeat center center fixed;
             background-size: cover;
             font-family: Arial, sans-serif;
         }
@@ -54,10 +54,10 @@
 
 <script>
     const instruments = [
-        { name: '鋼琴', sound: 'sounds/piano.mp3', image: 'res/piano_icon.png' },
-        { name: '吉他', sound: 'sounds/guitar.mp3', image: 'res/guitar_icon.png' },
-        { name: '小號', sound: 'sounds/trumpet.mp3', image: 'res/trumpet_icon.png' },
-        { name: '鼓', sound: 'sounds/drum.mp3', image: 'res/drum_icon.png' }
+        { name: '小鈔', sound: 'sounds/小鈔.m4a', image: 'res/小鈔.avif' },
+        { name: '嗩吶', sound: 'sounds/嗩吶.m4a', image: 'res/嗩吶.png' },
+        { name: '響盞', sound: 'sounds/響盞.m4a', image: 'res/響盞.png' },
+        { name: '鑼', sound: 'sounds/鑼.m4a', image: 'res/鑼.webp' }
     ];
     let audio = new Audio();
     let resultDiv = document.getElementById('result');
